--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,6 +89,8 @@ jobs:
           mv _ark/config/songs_ce.dta _ark/config/songs.dta
           rm -f _ark/config/store.dta
           mv _ark/config/store_ce.dta _ark/config/store.dta
+          rm -f _ark/config/campaign.dta
+          mv _ark/config/campaign_ce.dta _ark/config/campaign.dta
           dependencies/arkhelper dir2ark ./_ark ./GEN -n MAIN -s 4073741823
       
       - name: Upload result
